--- a/public/dynamic/index.html
+++ b/public/dynamic/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.3.0/material.indigo-pink.min.css">
   <link rel="stylesheet" href="/src/css/app.css">
-  <link rel="stylesheet" href="/src/css/main.css">
+  <link rel="stylesheet" href="/src/css/dynamic.css">
 </head>
 <body>
 
